chore: prepare for Railway + Vercel deployment